# gazebo_plugin_setup

./: CMakeLists.txt  README.md  fresnel.world  model_push.cc  model_push.world  ocean_visual.cc  simple_visual.cc
fresnel_plane/: model.config  model.sdf
fresnel_plane/materials/scripts/: fresnel.material  fresnel_fp.glsl  fresnel_vp.glsl
